2004-07-20  Crispin Flowerday  <gnome@flowerday.cx>

	* NEWS: Fix a typo in my name

Tue Jul 20 04:31:40 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* configure.in: Bump version number

Sun Jul 18 19:40:30 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* === Released 2.5.0 ===

	* Makefile.am (BUILT_EXTRA_DIST): move gtk-doc.make here.

Sun Jul 18 01:40:28 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Updates for 2.5.0

Mon Jul 12 00:02:40 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gi18n-lib.h: Remove the ENABLE_NLS check here as well.

2004-07-09  Matthias Clasen  <mclasen@redhat.com>

	* glib/gdir.c (g_dir_open): Convert filename to UTF-8 
	before using it in the error message.  (#146054, Federico
	Mena Quintero)

Thu Jul  8 00:54:32 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gi18n.h: Remove the ENABLE_NLS check, since GLib can't
	be built without anyway.  (#135899, Murray Cumming)

Mon Jul  5 18:50:27 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmessages.h (g_debug): Complete the g_log() 
	family.  (#135730, Sven Herzberg)

Mon Jul  5 18:42:30 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gnulib/Makefile.am (INCLUDES): Add top_srcdir to 
	make srcdir != . work.  (#145166, Kaz Sasayama)

Sun Jul  4 01:52:18 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Use a small test library instead of
	libpthread.so for testing RTLD_GLOBAL brokenness.  (#139567,
	Julio M. Merino Vidal)
	
2004-07-02  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gatomic.c: Rename __asm to __asm__ and __volatile to
	__volatile__ to make the file consistent. Spotted by Benoit
	Carpentier <gtkool_2kx@yahoo.fr>.

2004-07-01  John Ehresman  <jpe@wingide.com>

	* glib/giowin32.c (g_io_channel_win32_init, g_io_win32_free)
	Initialize reset_send & reset_recv fields and don't close
	sockets unless they were created.  (#145153)

Fri Jun 11 22:56:46 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gscanner.c (g_scanner_get_token_ll): Ignore a 